// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<style>
.IS1 {
  width: 285;
  height: 73;
  margin-vertical: 10px;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04;
  font-size: 16px;
  margin-bottom: 25px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS4 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS5 {
  width: 60;
  height: 45;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 100%;
}

.IS7 {
  width: 60;
  height: 45;
}

.IS8 {
  -webkit-align-items: center;
  align-items: center;
  background-color: rgba(240,240,240,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <Image
    aspectRatio={1}
    className="IS1"
    uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
  />
  <div
    className="css-text-901oao IS2"
  >
    Daily Universal Register
  </div>
  <TileS
    breakpoint="small"
  />
  <div
    className="css-view-1dbjc4n IS3"
  />
  <TileS
    breakpoint="small"
  />
  <div
    className="css-view-1dbjc4n IS4"
  />
  <Image
    aspectRatio={1}
    className="IS5"
    uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
  />
  <TileS
    breakpoint="small"
  />
  <div
    className="css-view-1dbjc4n IS6"
  />
  <Image
    aspectRatio={1}
    className="IS7"
    uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
  />
  <TileS
    breakpoint="small"
  />
</div>
`;

exports[`1. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS7"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <TheSTLogo
      height={40}
      width={60}
    />
  </div>
  <div
    className="css-view-1dbjc4n IS2"
  />
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div
        className="css-view-1dbjc4n IS5"
      />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 2`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS7"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <TheTimesLogo
      height={37}
      width={35}
    />
  </div>
  <div
    className="css-view-1dbjc4n IS2"
  />
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div
        className="css-view-1dbjc4n IS5"
      />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`2. lead one full width 1`] = `
<TileA
  tileName="lead"
/>
`;

exports[`2. leaders 1`] = `
<style>
.IS1 {
  height: 54;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  padding-bottom: 5px;
}

.IS8 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.4}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/logos/sundaytimes-with-crest-black-53d6e31fb8.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-901oao IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div
      className="css-view-1dbjc4n IS5"
    />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div
      className="css-view-1dbjc4n IS6"
    />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`2. leaders 2`] = `
<style>
.IS1 {
  height: 51;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  padding-bottom: 5px;
}

.IS8 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.74}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-901oao IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div
      className="css-view-1dbjc4n IS5"
    />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div
      className="css-view-1dbjc4n IS6"
    />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`3. lead one and one 1`] = `
<style>
.IS1 {
  background-color: rgba(219,219,219,1.00);
  height: 1px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <TileA
    tileName="lead"
  />
  <div
    className="css-view-1dbjc4n IS1"
  />
  <TileB
    tileName="support"
  />
</div>
`;

exports[`4. lead one and four 1`] = `
Array [
  <TileI
    tileName="lead"
  />,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n"
  >
    <TileJ
      tileName="support1"
    />
    <div
      className="css-view-1dbjc4n IS1"
    />
    <TileJ
      tileName="support2"
    />
    <div
      className="css-view-1dbjc4n IS2"
    />
    <TileJ
      tileName="support3"
    />
    <div
      className="css-view-1dbjc4n IS3"
    />
    <TileJ
      tileName="support4"
    />
  </div>,
]
`;

exports[`5. standard 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileK
          breakpoint="small"
          tileName="standardItem1"
        />
        <div
          className="css-view-1dbjc4n IS1"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileK
          breakpoint="small"
          tileName="standardItem2"
        />
        <div
          className="css-view-1dbjc4n IS2"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileK
          breakpoint="small"
          tileName="standardItem3"
        />
        <div
          className="css-view-1dbjc4n IS3"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileK
          breakpoint="small"
          tileName="standardItem4"
        />
        <div
          className="css-view-1dbjc4n IS4"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileK
          breakpoint="small"
          tileName="standardItem5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`6. lead two no pic and two 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <TileF
    tileName="lead1"
  />
  <div
    className="css-view-1dbjc4n IS1"
  />
  <TileB
    tileName="lead2"
  />
  <div
    className="css-view-1dbjc4n IS2"
  />
  <TileD
    tileName="support1"
  />
  <div
    className="css-view-1dbjc4n IS3"
  />
  <TileE
    tileName="support2"
  />
</div>
`;

exports[`7. secondary one 1`] = `
<TileA
  tileName="secondary"
/>
`;

exports[`8. secondary one and columnist 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <TileT
    tileName="secondary"
  />
  <div
    className="css-view-1dbjc4n IS1"
  />
  <TileH
    tileName="columnist"
  />
</div>
`;

exports[`9. secondary four 1`] = `
Array [
  <style>
.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n IS1"
  />,
  <style>
.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="secondary3"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>,
]
`;

exports[`10. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS7"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <TheTimesLogo
      height={37}
      width={35}
    />
  </div>
  <div
    className="css-view-1dbjc4n IS2"
  />
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TileN
          breakpoint="small"
          tileName="secondary"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <TileO
        breakpoint="small"
        tileName="support1"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileO
        breakpoint="small"
        tileName="support2"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileO
        breakpoint="small"
        tileName="support3"
      />
      <div
        className="css-view-1dbjc4n IS5"
      />
      <TileO
        breakpoint="small"
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two 1`] = `
Array [
  <style>
.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="secondary2"
      />
    </div>
  </div>,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n IS1"
  />,
  <div
    className="css-view-1dbjc4n"
  >
    <TileG
      tileName="support1"
    />
  </div>,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n IS1"
  />,
  <div
    className="css-view-1dbjc4n"
  >
    <TileG
      tileName="support2"
    />
  </div>,
]
`;

exports[`12. secondary two no pic and two 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <TileB
    tileName="secondary1"
  />
  <div
    className="css-view-1dbjc4n IS1"
  />
  <TileB
    tileName="secondary2"
  />
  <div
    className="css-view-1dbjc4n IS2"
  />
  <TileG
    tileName="support1"
  />
  <div
    className="css-view-1dbjc4n IS3"
  />
  <TileG
    tileName="support2"
  />
</div>
`;

exports[`13. list two and six no pic 1`] = `
Array [
  <style>
.IS1 {
  padding-bottom: 5px;
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  padding-bottom: 5px;
  width: 50%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileC
        tileName="lead1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileC
        tileName="lead2"
      />
    </div>
  </div>,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n IS1"
  />,
  <style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
    className="css-view-1dbjc4n"
  >
    <TileL
      tileName="support1"
    />
    <div
      className="css-view-1dbjc4n IS1"
    />
    <TileL
      tileName="support2"
    />
    <div
      className="css-view-1dbjc4n IS2"
    />
    <TileL
      tileName="support3"
    />
    <div
      className="css-view-1dbjc4n IS3"
    />
    <TileL
      tileName="support4"
    />
    <div
      className="css-view-1dbjc4n IS4"
    />
    <TileL
      tileName="support5"
    />
    <div
      className="css-view-1dbjc4n IS5"
    />
    <TileL
      tileName="support6"
    />
  </div>,
]
`;

exports[`14. leaders 1`] = `
<style>
.IS1 {
  height: 51;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  padding-bottom: 5px;
}

.IS8 {
  background-color: rgba(240,240,240,1.00);
  padding-top: 20px;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <Image
      aspectRatio={5.74}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <div
        className="css-text-901oao IS2"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <TileM
      breakpoint="small"
      tileName="leader1"
    />
    <div
      className="css-view-1dbjc4n IS5"
    />
    <TileM
      breakpoint="small"
      tileName="leader2"
    />
    <div
      className="css-view-1dbjc4n IS6"
    />
    <TileM
      breakpoint="small"
      tileName="leader3"
    />
  </div>
</div>
`;

exports[`15. comment lead and cartoon 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <TileP
    tileName="lead"
  />
  <div
    className="css-view-1dbjc4n IS1"
  />
  <TileQ
    tileName="cartoon"
  />
</div>
`;

exports[`16. puzzle 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 10px;
  padding-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="css-view-1dbjc4n IS4"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <TileAJ
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <TileAJ
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS3"
  >
    <TileAJ
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
</div>
`;
